# VolGuard

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
sbom/: bom.json
tests/: test_cli.py  test_hidden_processes.py  test_report.py  test_scan_e2e.py  test_ssdt_hooks.py  test_validation.py
tests/fixtures/: snapshot_win11_24h2_case1.json  ti_rules.json
volguard/: cli.py  report.py
volguard/core/: data_models.py  scan.py
volguard/plugins/: dkom.py  etw_ti.py  hidden_processes.py  ssdt_hooks.py
