[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volguard"
version = "0.3.0"
description = "VolGuard: small Windows memory detections and CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Mono GlaShyiz"}]
dependencies = [
  "rich>=13,<14",
  "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8",
  "coverage>=7,<8",
  "ruff>=0.6,<1",
]

[project.scripts]
volguard = "volguard.cli:main"

[tool.setuptools.packages.find]
include = ["volguard*"]
exclude = ["tests*", "sbom*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
ignore = []
